# pico_func_gen

./: CMakeLists.txt
include/: ad9833.h  commands.h  cursor.h  keypad.h  log.h  tusb_config.h
src/: ad9833.c  commands.c  cursor.c  keypad.c  log.c  main.c  usb_descriptors.c  usbtmc_app.c
